service-builder now clean up taskruns

--- a/extensions/builder/service-builder/k8s/apiserversource.yaml.j2
+++ b/extensions/builder/service-builder/k8s/apiserversource.yaml.j2
@@ -13,8 +13,8 @@ spec:
       kind: Deployment
     - apiVersion: krules.dev/v1alpha1
       kind: ConfigurationProvider
-#    - apiVersion: krules.dev/v1alpha1
-#      kind: ServiceConfigurationProvider
+    - apiVersion: krules.dev/v1alpha1
+      kind: ServiceConfigurationProvider
 #    - apiVersion: krules.dev/v1alpha1
 #      kind: FeatureConfigurationProvider
     - apiVersion: tekton.dev/v1beta1
