--- a/extensions/builder/service-builder/k8s/config-ruleset.yaml.j2
+++ b/extensions/builder/service-builder/k8s/config-ruleset.yaml.j2
@@ -10,12 +10,15 @@ spec:
   data:
     taskRun:
         spec:
+            taskRef:
+               name: build-and-push
             serviceAccountName: {{ app_name }}-tekton
             params:
             - name: imageRepo
               value: $IMAGE_REPO
             - name: imagePrefix
               value: $IMAGE_PREFIX
+
   container:
     envFrom:
     - configMapRef:
