--- a/extensions/builder/service-builder/k8s/serviceaccounts.yaml.j2
+++ b/extensions/builder/service-builder/k8s/serviceaccounts.yaml.j2
@@ -41,7 +41,6 @@ rules:
     - "tekton.dev"
   resources:
     - taskruns
-    #- pipelineruns
   verbs:
     - list
     - get
@@ -91,6 +90,7 @@ rules:
     - list
     - get
     - create
+    - delete
 - apiGroups:
     - "serving.knative.dev"
   resources:
