builder annotates pods in subjects

--- a/extensions/builder/service-builder/k8s/serviceaccounts.yaml.j2
+++ b/extensions/builder/service-builder/k8s/serviceaccounts.yaml.j2
@@ -45,6 +45,14 @@ rules:
     - list
     - get
     - watch
+- apiGroups:
+    - ""
+  resources:
+    - pods
+  verbs:
+    - get
+    - list
+    - watch
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
@@ -82,6 +90,13 @@ rules:
     - get
     - create
 - apiGroups:
+    - ""
+  resources:
+    - pods
+    - pods/log
+  verbs:
+    - get
+- apiGroups:
     - "tekton.dev"
   resources:
     - taskruns
@@ -109,7 +124,6 @@ rules:
     - get
     - create
     - patch
-
 - apiGroups:
     - krules.dev
   resources:
