change builder services subject name

--- a/extensions/builder/service-builder/k8s/apiserversource.yaml.j2
+++ b/extensions/builder/service-builder/k8s/apiserversource.yaml.j2
@@ -11,6 +11,8 @@ spec:
       kind: Service
     - apiVersion: apps/v1
       kind: Deployment
+    - apiVersion: apps/v1
+      kind: ReplicaSet
     - apiVersion: v1
       kind: Pod
     - apiVersion: krules.dev/v1alpha1
