builder populate-context fix absoulte path files

--- a/extensions/builder/service-builder/k8s/task-build-and-push.yaml.j2
+++ b/extensions/builder/service-builder/k8s/task-build-and-push.yaml.j2
@@ -26,8 +26,8 @@ spec:
         - /usr/local/bin/python
       args:
         - "populate-context.py"
-        - "source-cm"
-        - "source"
+        - "/source-cm"
+        - "/source"
       volumeMounts:
         - name: build-source-cm
           mountPath: /source-cm
