--- a/libs/krules-core/setup.py.j2
+++ b/libs/krules-core/setup.py.j2
@@ -29,6 +29,8 @@ setup(
         'rx==3.1.1',
         'jsonpatch==1.26',
         'jsonpath-rw-ext==1.2.2',
+        'pydantic>=1.9.1',
+        'deepmerge>=1.0.1',
     ],
     setup_requires=[
         'pytest-runner',
