--- a/extensions/builder/service-builder/Dockerfile.j2
+++ b/extensions/builder/service-builder/Dockerfile.j2
@@ -5,3 +5,4 @@ RUN pip3 install jsonpath-ng
 ADD k8s.py /app/k8s.py
 ADD builder_functions.py /app/builder_functions.py
 ADD ruleset.py /app/ruleset.py
+ADD env.py /app/env.py
