implement CELExpressionArgProcessor and add implicit ArgProcessor wrapping

--- a/libs/krules-core/setup.py.j2
+++ b/libs/krules-core/setup.py.j2
@@ -31,6 +31,7 @@ setup(
         'jsonpath-rw-ext==1.2.2',
         'pydantic>=1.9.1',
         'deepmerge>=1.0.1',
+        'cel-python==0.1.5'
     ],
     setup_requires=[
         'pytest-runner',
