--- a/libs/krules-dispatcher-cloudevents-pubsub/setup.py.j2
+++ b/libs/krules-dispatcher-cloudevents-pubsub/setup.py.j2
@@ -1,4 +1,6 @@
 import os
+
+import setuptools
 from setuptools import setup, find_packages
 
 
@@ -6,39 +8,34 @@ def read(fname):
     return open(os.path.join(os.path.dirname(__file__), fname)).read()
 
 setup(
-    name='krules-core',
+    name='krules-dispatcher-cloudevents',
 {% if release_version %}
     version="{{ release_version }}",
-{% endif %}
+{%  endif %}
     author="Alberto Degli Esposti",
     author_email="alberto@arispot.tech",
-    description="KRules Python core package",
+    description="KRules cloudevents PUBSUB dispatcher",
     license="Apache Licence 2.0",
-    keywords="krules rules engine",
-    url="https://github.com/airspot-dev/krules-core",
-    packages=find_packages(),
+    keywords="krules cloudevents pubsub router",
+    url="https://github.com/airspot-dev/krules-dispatcher-cloudevents-pubsub",
+    packages=setuptools.find_packages(),
     long_description=read('README.md'),
     classifiers=[
         "Development Status :: 3 - Alpha",
         "License :: OSI Approved :: Apache Software License",
     ],
-    python_requires='>3.7',
     install_requires=[
-        #'dependency-injector==4.39.1',
-        'dependency-injector',
-        #'wrapt==1.12.1',
-        'wrapt==1.14.1',
-        'rx==3.1.1',
-        'jsonpatch==1.26',
-        'jsonpath-rw-ext==1.2.2',
-        'pydantic>=1.9.1',
-        'deepmerge>=1.0.1',
-        'cel-python==0.1.5',
+{% if release_version %}
+        'krules-core=={{ release_version }}',
+{% endif %}
+        'cloudevents==1.7.1',
+        'google-cloud-pubsub==2.13.11',
     ],
     setup_requires=[
         'pytest-runner',
     ],
     tests_require=[
         'pytest',
+        'pytest-localserver',
     ],
 )
