--- a/dev_support/krules-cli/setup.py.j2
+++ b/dev_support/krules-cli/setup.py.j2
@@ -18,6 +18,7 @@ setup(
     long_description=read('README.md'),
     packages=find_packages(),
     install_requires=[
+        'markdown==3.3.6',
         'click',
         'gitpython',
         'mdv3',
