change flask with flask api in ruleset images

--- a/dev_support/krules-dev-support/setup.py.j2
+++ b/dev_support/krules-dev-support/setup.py.j2
@@ -27,6 +27,7 @@ setup(
         'python-dotenv==0.19.0',
         'PyYAML==5.4.1',
         'MarkupSafe==2.0.1',
+        'GitPython==3.1.30',
     ],
     setup_requires=[
         'pytest-runner',
