--- a/images/generic-image-base/Dockerfile.j2
+++ b/images/generic-image-base/Dockerfile.j2
@@ -1,3 +1,18 @@
+{% if extra_index_url %}
+FROM python:3.10-slim-bullseye as pkg-build
+
+WORKDIR /packages/
+{% if gcp_service_account_path %}
+ENV GOOGLE_APPLICATION_CREDENTIALS /service-account.json
+COPY ./{{ gcp_service_account_path }}/service-account.json /service-account.json
+COPY ./{{ gcp_service_account_path }}/.pypirc /.pypirc
+{% endif %}
+
+RUN pip install keyrings.google-artifactregistry-auth
+RUN pip download --extra-index-url {{ extra_index_url }} krules-env=={{ release_version }} krules-subjects-storage-redis=={{ release_version }}
+
+{% endif %}
+
 FROM python:3.10-slim-bullseye
 
 ENV VIRTUAL_ENV=/opt/venv
@@ -11,6 +26,13 @@ RUN pip3 install --upgrade pip setuptools wheel
 
 ADD env.py /app/
 
+{% if extra_index_url %}
+WORKDIR packages
+COPY --from=pkg-build /packages/ /packages/
+# Installing the packages from the copied files
+RUN pip install --no-index --find-links=/packages/ /packages/*
+WORKDIR /app
+{% else %}
 {% if release_version %}
 RUN pip3 install --no-cache-dir krules-env=={{ release_version }}
 {% else %}
@@ -33,3 +55,4 @@ ADD .build/.subjects-backends/{{ backend }} /.subjects-backends/{{ backend }}
 RUN cd /.subjects-backends/{{ backend }} && python3 setup.py develop
 {% endif %}
 {% endfor %}
+{% endif %}
