--- a/images/ruleset-image-base/Dockerfile.j2
+++ b/images/ruleset-image-base/Dockerfile.j2
@@ -23,6 +23,6 @@ ADD ./app /app
 ENV PYTHONPATH /app
 WORKDIR /app
 
-RUN pip install uvicorn[standard]==0.17.6 fastapi-cloudevents
+RUN pip install uvicorn[standard]==0.17.6
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
