fix krules-dev-support requirements

--- a/dev_support/krules-dev-support/setup.py.j2
+++ b/dev_support/krules-dev-support/setup.py.j2
@@ -28,6 +28,7 @@ setup(
         'PyYAML==5.4.1',
         'MarkupSafe==2.0.1',
         'GitPython==3.1.30',
+        'build==0.10.0',
     ],
     setup_requires=[
         'pytest-runner',
