--- a/libs/krules-fastapi-env/setup.py.j2
+++ b/libs/krules-fastapi-env/setup.py.j2
@@ -27,7 +27,8 @@ setup(
         "krules-env=={{ release_version }}",
 {% endif %}
         "MarkupSafe==2.0.1",
-        "fastapi==0.92.0"
+        "fastapi==0.92.0",
+        "json-logging==1.3.0"
     ],
     setup_requires=[
         'pytest-runner',
