update templates to build local with skaffold

--- a/templates/gcp-gke-ruleset/Dockerfile.j2
+++ b/templates/gcp-gke-ruleset/Dockerfile.j2
@@ -5,5 +5,6 @@ ADD .user-baselibs/{{ user_lib }} /app/{{ user_lib }}
 RUN cd /app/{{ user_lib }} && test -f requirements.txt && pip3 install -r requirements.txt || echo "no reqs for {{ user_lib }}"
 {% endfor %}
 
-ADD ruleset.py /app/ruleset.py
-ADD routers.py /app/routers.py
+{% for source in sources %}
+ADD {{ source }} /app/{{ source }}
+{% endfor %}
