--- a/templates/gcp-gke-ruleset/skaffold.yaml.j2
+++ b/templates/gcp-gke-ruleset/skaffold.yaml.j2
@@ -1,22 +1,27 @@
 
-apiVersion: skaffold/v2beta7
+apiVersion: skaffold/v3alpha1
 kind: Config
 build:
   artifacts:
     - image: {{ app_name }}
-      context: ".build"
+  {% if use_cloudbuild%}
   googleCloudBuild:
     projectId: {{ project_id }}
+  {% else %}
+  local:
+    useDockerCLI: false
+    useBuildkit: false
+  {% endif %}
+deploy:
+  {% if use_cloudrun %}
+  cloudrun: {}
+  {% else %}
+  kubectl: {}
+  {% endif %}
 profiles:
 {% for target in targets %}
   - name: {{ target }}
-    deploy:
-      kubectl:
-        manifests:
-        - k8s/{{target}}/*.yaml
+    manifests:
+      rawYaml:
+       - k8s/{{target}}/*.yaml
 {% endfor %}
-portForward:
-  - resourceType: deployment
-    resourceName: {{ app_name }}
-    port: 8080
-    localPort: 9000
