--- a/dev_support/krules-dev-support/setup.py.j2
+++ b/dev_support/krules-dev-support/setup.py.j2
@@ -27,7 +27,8 @@ setup(
         'python-dotenv==0.19.0',
         'PyYAML==5.4.1',
         'MarkupSafe==2.0.1',
-        'GitPython==3.1.30'
+        'GitPython==3.1.30',
+        'sh==2.0.4'
     ],
     setup_requires=[
         'pytest-runner',
