intruduced structlog + sh python lib

--- a/dev_support/krules-dev-support/setup.py.j2
+++ b/dev_support/krules-dev-support/setup.py.j2
@@ -22,13 +22,17 @@ setup(
     ],
     python_requires='>=3.8',
     install_requires=[
-        'Jinja2==3.0.1',
-        'sane-build==7.2',
-        'python-dotenv==0.19.0',
+        'Jinja2>=3.0.1',
+        'sane-build>=7.2',
+        'python-dotenv>=0.19.0',
         'PyYAML==5.4.1',
         'MarkupSafe==2.0.1',
-        'GitPython==3.1.30',
-        'sh==2.0.4'
+        'GitPython>=3.1.30',
+        'sh>=2.0.4',
+        'structlog>=23.1.0',
+        'rich',
+        'better_exceptions',
+
     ],
     setup_requires=[
         'pytest-runner',
