dev support refactory

--- a/dev_support/krules-dev-support/setup.py.j2
+++ b/dev_support/krules-dev-support/setup.py.j2
@@ -32,9 +32,8 @@ setup(
         'structlog>=23.1.0',
         'rich',
         'better_exceptions',
-
     ],
-    setup_requires=[
+    setup_reuires=[
         'pytest-runner',
     ],
     tests_require=[
