--- a/images/ruleset-gcp-image-base/Dockerfile.j2
+++ b/images/ruleset-gcp-image-base/Dockerfile.j2
@@ -1,7 +1,7 @@
 FROM {{ image_base }}
 MAINTAINER Airspot <info@airspot.tech>
 
-RUN pip3 install --no-cache-dir python-dateutil gunicorn {% if release_version %}\
+RUN pip3 install --no-cache-dir google-cloud-secret-manager python-dateutil gunicorn {% if release_version %}\
 {% for lib in krules_libs %}
  && pip3 install --no-cache-dir {{ lib }}=={{ release_version }} {% if not loop.last %}\{%  endif %}
 
