--- a/libs/krules-core/setup.py.j2
+++ b/libs/krules-core/setup.py.j2
@@ -24,12 +24,12 @@ setup(
     ],
     python_requires='>3.7',
     install_requires=[
-        'dependency-injector==4.40.0',
+        'dependency-injector==4.41.0',
         'wrapt==1.14.1',
         'rx==3.1.1',
         'jsonpatch==1.32',
         'jsonpath-rw-ext==1.2.2',
-        'pydantic>=1.9.1',
+        'pydantic==2.4.2',
         'deepmerge>=1.0.1',
         'cel-python==0.1.5'
     ],
