--- a/libs/krules-env/setup.py.j2
+++ b/libs/krules-env/setup.py.j2
@@ -25,7 +25,7 @@ setup(
     install_requires=[
         "pyyaml",
 {% if release_version %}
-        "krules-dispatcher-cloudevents=={{ release_version }}",
+        "krules-dispatcher-cloudevents==0.12.6rc1",
 {%  endif %}
     ],
     setup_requires=[
