--- a/subjects_storages/redis/setup.py.j2
+++ b/subjects_storages/redis/setup.py.j2
@@ -36,7 +36,7 @@ setup(
     install_requires=[
         'redis==3.5.3',
 {% if release_version %}
-        'krules-core=={{ release_version }}',
+        'krules-core==0.12.6rc1',
 {% endif %}
     ],
     setup_requires=[
