--- a/libs/krules-dispatcher-cloudevents/setup.py.j2
+++ b/libs/krules-dispatcher-cloudevents/setup.py.j2
@@ -26,7 +26,7 @@ setup(
     ],
     install_requires=[
 {% if release_version %}
-        'krules-core=={{ release_version }}',
+        'krules-core==0.12.6.rc1',
 {% endif %}
         'cloudevents==1.7.1',
         'pytz==2020.5',
