--- a/libs/krules-fastapi-env/setup.py.j2
+++ b/libs/krules-fastapi-env/setup.py.j2
@@ -24,10 +24,9 @@ setup(
     ],
     install_requires=[
 {% if release_version %}
-        "krules-env=={{ release_version }}",
+        "krules-env==0.12.6.rc1",
 {% endif %}
-        "MarkupSafe==2.0.1",
-        "fastapi==0.92.0",
+        "fastapi==0.104.0",
         "json-logging==1.3.0"
     ],
     setup_requires=[
